feat: use system locale, live calendar refresh, and optimized DB init
- Switch to expo-localization for system-based language
- Calendar tab now refetches on focus via useFocusEffect for up-to-date entries
- Merge DB init into getDB singleton; remove redundant initDB calls
- Add localized app name support in app.json

--- a/app.json
+++ b/app.json
@@ -4,16 +4,19 @@
     "slug": "anokoro-diary",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/images/icon.png",
+    "icon": "./assets/images/icon.png",
     "scheme": "anokorodiary",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "CFBundleAllowMixedLocalizations": true
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
@@ -23,12 +26,15 @@
       "output": "static",
       "favicon": ".src/assets/images/favicon.png"
     },
+    "locales": {
+      "ja": "./languages/japanese.json"
+    },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./src/assets/images/splash-icon.png",
+          "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
