--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -19,7 +19,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@types/react-native-flip-card": "^3.5.7",
-    "expo": "53.0.11",
+    "expo": "53.0.12",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -33,14 +33,14 @@
     "expo-sqlite": "~15.2.12",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "i18n-js": "^4.5.1",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-calendars": "^1.1312.1",
     "react-native-countdown-component": "^2.7.1",
     "react-native-flip-card": "^3.5.7",
