fix: adjust styles for Android compatibility

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "ios": {
       "supportsTablet": true,
       "infoPlist": {
-        "CFBundleAllowMixedLocalizations": true
+        "CFBundleAllowMixedLocalizations": true,
+        "ITSAppUsesNonExemptEncryption": false
       },
       "bundleIdentifier": "com.ezgna.re-day"
     },
@@ -46,6 +47,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "c8aaf04f-9b9b-43da-bb79-d27c2ccd9c75"
+      }
     }
   }
 }
