--- a/package.json
+++ b/package.json
@@ -57,7 +57,10 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-device": "~7.1.4",
+    "expo-application": "~6.1.5",
+    "expo-mail-composer": "~14.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
