--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-linking": "~8.0.8",
     "expo-localization": "~17.0.7",
     "expo-mail-composer": "~15.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.12",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
@@ -43,13 +44,10 @@
     "i18n-js": "^4.5.1",
     "immer": "^10.1.3",
     "lucide-react-native": "^0.542.0",
-    "patch-package": "^8.0.0",
-    "postinstall-postinstall": "^2.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1312.1",
-    "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
     "react-native-picker-select": "^9.3.1",
@@ -60,13 +58,12 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "~0.5.1",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
-    "@types/react-native-countdown-component": "^2.7.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
