--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@shopify/flash-list": "2.0.2",
     "@types/react-native-flip-card": "^3.5.7",
     "expo": "^54.0.13",
     "expo-application": "~7.0.7",
