--- a/package.json
+++ b/package.json
@@ -21,28 +21,30 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
     "@types/react-native-flip-card": "^3.5.7",
-    "expo": "^54.0.13",
-    "expo-application": "~7.0.7",
-    "expo-blur": "~15.0.7",
+    "expo": "~54.0.30",
+    "expo-application": "~7.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-constants": "~18.0.9",
-    "expo-dev-client": "~6.0.15",
-    "expo-device": "~8.0.9",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
     "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-localization": "~17.0.7",
-    "expo-mail-composer": "~15.0.7",
-    "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.12",
-    "expo-splash-screen": "~31.0.10",
-    "expo-sqlite": "~16.0.8",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-localization": "~17.0.8",
+    "expo-mail-composer": "~15.0.8",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.21",
+    "expo-splash-screen": "~31.0.13",
+    "expo-sqlite": "~16.0.10",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-tracking-transparency": "~6.0.8",
+    "expo-updates": "~29.0.15",
+    "expo-web-browser": "~15.0.10",
     "i18n-js": "^4.5.1",
     "immer": "^10.1.3",
     "lucide-react-native": "^0.542.0",
@@ -51,6 +53,7 @@
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1312.1",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-google-mobile-ads": "^16.0.1",
     "react-native-pager-view": "6.9.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~4.1.1",
